; ModuleID = '/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_descriptor.c__arraydescr_from_dtype_attr.c'
source_filename = "/home/carl/AnghaBench/numpy/numpy/core/src/multiarray/extr_descriptor.c__arraydescr_from_dtype_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"dtype\00", align 1
@.str.1 = private unnamed_addr constant [74 x i8] c" while trying to convert the given data type from its `.dtype` attribute.\00", align 1
@NPY_SUCCEED = common dso_local global i32 0, align 4
@PyExc_RecursionError = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_arraydescr_from_dtype_attr(i32* %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32** %1, i32*** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i32* @PyObject_GetAttrString(i32* %8, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %31

13:                                               ; preds = %2
  %14 = call i64 @Py_EnterRecursiveCall(i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str.1, i64 0, i64 0))
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %13
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @Py_DECREF(i32* %17)
  store i32 1, i32* %3, align 4
  br label %38

19:                                               ; preds = %13
  %20 = load i32*, i32** %6, align 8
  %21 = load i32**, i32*** %5, align 8
  %22 = call i32 @PyArray_DescrConverter(i32* %20, i32** %21)
  store i32 %22, i32* %7, align 4
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @Py_DECREF(i32* %23)
  %25 = call i32 (...) @Py_LeaveRecursiveCall()
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* @NPY_SUCCEED, align 4
  %28 = icmp ne i32 %26, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %19
  br label %31

30:                                               ; preds = %19
  store i32 1, i32* %3, align 4
  br label %38

31:                                               ; preds = %29, %12
  %32 = load i32, i32* @PyExc_RecursionError, align 4
  %33 = call i32 @PyErr_ExceptionMatches(i32 %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %37, label %35

35:                                               ; preds = %31
  %36 = call i32 (...) @PyErr_Clear()
  store i32 0, i32* %3, align 4
  br label %38

37:                                               ; preds = %31
  store i32 1, i32* %3, align 4
  br label %38

38:                                               ; preds = %37, %35, %30, %16
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32* @PyObject_GetAttrString(i32*, i8*) #1

declare dso_local i64 @Py_EnterRecursiveCall(i8*) #1

declare dso_local i32 @Py_DECREF(i32*) #1

declare dso_local i32 @PyArray_DescrConverter(i32*, i32**) #1

declare dso_local i32 @Py_LeaveRecursiveCall(...) #1

declare dso_local i32 @PyErr_ExceptionMatches(i32) #1

declare dso_local i32 @PyErr_Clear(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
